<resources>
    <string name="app_name">PRETSAL</string>
    <string name="PRETSAL">PRETSAL\n SIGN UP</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="Register">Register!</string>
    <string name="new_account">Already have an account\n SIGN IN!</string>
    <string name="login">Login</string>
    <string name="pretsal">PRETSAL\n LOGIN</string>
    <string name="log_account">Need an account?\n SIGN UP!</string>
    <string name="id">ID</string>
    <string name="one">01</string>
    <string name="gender">Gender</string>
    <string name="logout">Logout</string>
    <string name="View">Shop</string>
    <string name="Account">Account</string>
    <string name="preferences">Preferences</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Please wait Loading…</string>
    <string name="new_product">New</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="tab_text_1">DRESSES</string>
    <string name="tab_text_2">HATS</string>
    <string name="tab_text_3">KICKS</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="afro1">Zuberi Afrikaan Print</string>
    <string name="afro2">Zuberi Ankara</string>
    <string name="afro3">Zuberi African Queen</string>
    <string name="hat1">Fedora</string>
    <string name="hat4">Winter warm Hats</string>
    <string name="hat3">Combat Jungle Hat</string>
    <string name="yeez">Yeezus Off-White</string>
    <string name="yeez2">Yeezy Ultra-Hype</string>
    <string name="balenci">Balenciaga 2016 edition</string>
    <string name="nb">New Balance Kicks Boost </string>
    <string name="choo">Jimmy Choo Heels"</string>
</resources>