<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.padegich.vaar.ProfileActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <TableRow>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/id"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                <TextView
                        android:id="@+id/textViewId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/one"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            </TableRow>

            <TableRow>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/username"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                <TextView
                        android:id="@+id/textViewUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="memento_mori"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            </TableRow>

            <TableRow>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/email"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                <TextView
                        android:id="@+id/textViewEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="juliocesarAD@gmail.com"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            </TableRow>

            <TableRow>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/gender"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                <TextView
                        android:id="@+id/textViewGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/male"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            </TableRow>


        </TableLayout>

        <Button
                android:id="@+id/buttonLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"/>
    </LinearLayout>

</RelativeLayout>
